# image_manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/image/checker/png/: adler32.hpp  crc.hpp  structure.hpp
include/image/compressor/png/: decompressor.hpp
include/image/compressor/png/details/: huffman_tree.hpp
include/image/compressor/png/details/inflators/: dynamic_huffman.hpp  fixed_huffman.hpp  huffman.hpp  inflator.hpp  no_compression.hpp
include/image/exception/reader/: wrong_bit_depth_for_color_type.hpp  wrong_color_type.hpp  wrong_crc.hpp  wrong_data_size.hpp  wrong_end_size.hpp  wrong_height_dimension.hpp  wrong_palette_datas_nb.hpp  wrong_signature.hpp  wrong_structure.hpp  wrong_width_dimension.hpp
include/image/exception/reader/png/: wrong_bit_depth_for_color_type.hpp  wrong_color_type.hpp  wrong_crc.hpp  wrong_data_size.hpp  wrong_end_size.hpp  wrong_height_dimension.hpp  wrong_palette_datas_nb.hpp  wrong_signature.hpp  wrong_structure.hpp  wrong_width_dimension.hpp
include/image/filter/png/: filter.hpp
include/image/model/: image.hpp
include/image/model/png/: chunck.hpp  content.hpp  standard_chunck.hpp
include/image/reader/: reader.hpp
include/image/reader/png/: chunck_reader.hpp  reader.hpp
include/image/signature/: reader.hpp  standard.hpp
include/image/signature/png/: reader.hpp  standard.hpp
include/image/standard_structure/png/: chuncks.hpp
include/image/standard_structure/png/manager/ancillary/: bkgd.hpp  chrm.hpp  (+12 more)
include/image/stream/png/: stream_reader.hpp
include/image/type/: jpeg.hpp  png.hpp
(+10 files in other folders)
